<resources>
    <string name="app_name">NewsApp</string>
    <string name="email">Username</string>
    <string name="erase_email">Erase Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="login_dialog_title">Oops… Sorry!</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="ok">OK</string>
    <string name="login_title">TimeRomanNews.</string>
    <string name="login">Login</string>
    <string name="login_dialog_text">Please login again.</string>
    <string name="profile_image">Profile Image</string>
    <string name="news_image">News Image</string>
    <string name="views">Views</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="password_is_not_valid">Password is not valid</string>
    <string name="home_title">Hot Topics</string>
    <string name="home_description">See What\'s Happening in the World</string>
    <string name="email_is_not_valid">Username is not valid</string>
    <string name="content_desc_email_input">Email Input</string>
    <string name="content_pass_input">Password Input</string>
    <string name="content_error_dialog">Error Dialog</string>
    <string name="content_home_screen">Home Screen</string>
    <string name="content_news_list">News List</string>
    <string name="content_profile_app_bar">Profile App Bar</string>
    <string name="content_profile_texts"><![CDATA[Profile Title & Details]]></string>
    <string name="content_news_card">News Card Item</string>
    <string name="content_news_title">News Title</string>
    <string name="content_news_actions">News Actions</string>
    <string name="content_news_date">News Date</string>
</resources>